[gd_scene load_steps=7 format=3 uid="uid://djbiv47x0t7gg"]

[ext_resource type="Script" uid="uid://mxlkyrobqegq" path="res://scripts/node_managers/npc.gd" id="1_vnwdf"]
[ext_resource type="PackedScene" uid="uid://c6ewpodeko760" path="res://scenes/npc_builders/health_bar.tscn" id="3_j4dpj"]
[ext_resource type="PackedScene" uid="uid://ckugwkaibl0ne" path="res://scenes/level_builders/touch_detector.tscn" id="3_vnwdf"]
[ext_resource type="Script" uid="uid://dfo7jylalx1l5" path="res://scripts/icon_extenders/collider.gd" id="4_n1ps7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i1lge"]
size = Vector2(30, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_j4dpj"]

[node name="NPC" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_vnwdf")

[node name="Texture" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0.145098, 1, 1)
metadata/_edit_use_anchors_ = true

[node name="NameTag" type="RichTextLabel" parent="Texture"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
theme_override_font_sizes/normal_font_size = 8
text = "Name"
fit_content = true
scroll_active = false
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_i1lge")

[node name="HealthBar" parent="." instance=ExtResource("3_j4dpj")]
offset_left = -16.0
offset_top = 16.0
offset_right = 844.0
offset_bottom = 253.0

[node name="TouchDetector" parent="." node_paths=PackedStringArray("monitored_parent", "collider") instance=ExtResource("3_vnwdf")]
scale = Vector2(2.94539, 2.94539)
monitored_parent = NodePath("..")
collider = NodePath("Collider")

[node name="Collider" type="CollisionShape2D" parent="TouchDetector"]
shape = SubResource("CircleShape2D_j4dpj")
script = ExtResource("4_n1ps7")
metadata/_custom_type_script = "uid://dfo7jylalx1l5"
